--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "16.8.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
